# shooty_c

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
assets/navmesh/: navmesh.txt
include/: Point.hpp
include/config/: GameConfig.hpp  SoldierTypeConfig.hpp
include/core/: Game.hpp
include/core/scene/: GameScene2D.hpp
include/nav/: NavMesh.hpp  PathFinding.hpp
include/projectile/: BaseProjectile.hpp
include/renderer/: ProjectileRenderer.hpp  Renderer.hpp  SoldierRenderer.hpp
include/soldier/: AISoldier.hpp  BaseSoldier.hpp  PlayerSoldier.hpp  SoldierStats.hpp  SoldierType.hpp
include/ui/: Hud.hpp
include/utils/: WeaponUtils.hpp
include/weapon/: BaseWeapon.hpp  WeaponType.hpp
include/weapon/assault_rifle/: M16.hpp
include/weapon/factory/: WeaponFactory.hpp
src/: CMakeLists.txt  Point.cpp  main.cpp
src/config/: GameConfig.cpp  SoldierTypeConfig.cpp  game.cfg
src/core/: Game.cpp
src/core/scene/: GameScene2D.cpp
src/nav/: NavMesh.cpp  PathFinding.cpp
src/projectile/: BaseProjectile.cpp
src/renderer/: ProjectileRenderer.cpp  SoldierRenderer.cpp
src/soldier/: AISoldier.cpp  BaseSoldier.cpp  PlayerSoldier.cpp
src/ui/: Hud.cpp
src/utils/: WeaponUtils.cpp
src/weapon/: BaseWeapon.cpp
src/weapon/assault_rifle/: M16.cpp
src/weapon/factory/: WeaponFactory.cpp
